# bachelor-thesis

appendix/: Makefile  gunicorn.conf.py  pyproject.toml
appendix/src/: colors.py  db.py  decorators.py  figures.py  main.py  settings.py
appendix/src/components/: containers.py  graph.py  ids.py  radio_group.py  slider.py  tabs.py
appendix/src/sql/: main.sql
